syntax = "proto3";
package pb;
option  go_package = "./pb";

message  Box {
  float  lat_min = 1; // 区域位置边界
  float  lng_min = 2; // 区域位置边界
  float  lat_max = 3; // 区域位置边界
  float  lng_max = 4; // 区域位置边界
}


message QueryReq {
  repeated int64 seg_id = 1;
  repeated int64 lane_id = 2;
  Box area = 3;
}

message LaneStatus {
    int64 lane_id =1;
    uint32 level =2;
}

message TrafficStatusResp {
  int64               code = 1;
  string              message = 2;
  int64               timestamp = 3;
  repeated LaneStatus traffics = 4;
}

service  TrafficCalculation {
  // 查询拥堵状态
  rpc QueryCurrentTraffic(QueryReq) returns (TrafficStatusResp);
}